fix: Update logo path

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <img src="/assets/icons/close.svg" alt="إغلاق" />
           </button>
           <a href="#" class="logo">
-            <img src="/assets/logo.png" alt="خبير للتسويق" width="160" />
+            <img src="/assets/images/logo.png" alt="خبير للتسويق" width="160" />
           </a>
           <ul class="mobile-nav-links">
             <li><a href="#">الرئيسية</a></li>
